# dask-fun

./: .gitignore  README.md  pyproject.toml
dask_examples/: csvs_to_parquet.py
daskfun/: csvs_to_parquet.py
data/more_people/: people1.csv
data/people/: people1.csv  people2.csv
dataframes/: predicate_pushdown_filtering.ipynb
notebooks/dataframes/: csvs_to_parquet.ipynb  predicate_pushdown_filtering.ipynb
notebooks/pyarrow/: movies.csv  parquet_metadata.ipynb
tests/: test_csvs_to_parquet.py  test_dask_dataframes.py  test_dask_examples.py  test_parquet_partition_pruning.py  test_pyarrow_fun.py
